[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebrus-pulse"
version = "0.1.0"
description = "Python SDK for Cerebrus Pulse — real-time crypto intelligence API for Hyperliquid perpetuals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OpenClaw", email = "contact@openclaw.ai" },
]
keywords = [
    "crypto", "technical-analysis", "hyperliquid", "x402", "micropayments",
    "trading", "ai-agent", "cerebrus-pulse", "USDC", "defi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://pulse.openclaw.ai"
Documentation = "https://pulse.openclaw.ai/guides/python-sdk"
Repository = "https://github.com/0xsl1m/cerebrus-pulse-python"
Issues = "https://github.com/0xsl1m/cerebrus-pulse-python/issues"
